--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-<!-- test test -->
+!<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- meta tags -->
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- meta tags -->
+
+    <!-- Links -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <link rel="stylesheet" href='./Public/Styles/custom-styles.css'>
+    <!-- Links -->
+
+    <!-- Scripts -->
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Scripts -->
+
+  <style>
+    
+  </style>
+
+    <title>Corn-Puter Computers</title>
+</head>
+
+<body>
+  <div class='page-grid'>
+    <!-- Navbar -->
+        <div class='navbar-grid'>
+                <img style= 'grid-column: 2; grid-row: 1; height: 40px; width: 40px; float: right; margin: auto; margin-left: 85%;' src='./Public/Images/Corn.png'>
+                <h1 style='grid-column:3 ; grid-row: 1; text-align: center; color: #ffffff; font-weight: lighter; font-size: 30px; margin-top: 5px; margin-bottom: 5px; padding-top: 5x;'>Corn-Puter Computers</h1> 
+                <button class='btn-nav-system-builder btn btn-success' style ='background: rgba(0, 0, 0, 0.0); border-right: none'>System Builder</button> 
+                <button class='btn-nav-featured-builds btn btn-success' style ='background: rgba(0, 0, 0, 0.0); border-right: none;'>Featured Builds</button> 
+                <button class='btn-nav-other btn btn-success' style ='background: rgba(0, 0, 0, 0.0); border-right: none;'>Testing</button> 
+                <button class='search-placeholder btn btn-success' style ='background-color: gray; border: none;'>search placeholder</button> 
+        </div>
+    <!-- Navbar -->
+
+    <!-- Top Half -->
+      <div class='our-info-grid'>
+        <!-- Text Left --> 
+          <div class='info-text-left'>
+            <h2>Welcome to Corn-Puter Computers</h2>
+          </div>
+        <!-- Text Left -->
+
+      </div>
+    <!-- Top Half -->
+
+    <!-- Featured Builds -->
+    <!-- Featured Builds -->
+
+    <!-- Footer -->
+      <div class='page-footer-grid'>
+        <!-- Left -->
+        <div class='footer-left'>
+
+        </div>
+        <!-- Left -->
+        
+        <!-- Center -->
+        <!-- Center -->
+
+        <!-- Right -->
+          <div class='footer-right'>
+            <p></p>
+          </div>
+        <!-- Right -->
+    <!-- Footer -->
+  </div>
+</body>
+</html>
