--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- meta tags -->
@@ -9,6 +9,7 @@
     <!-- Links -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <link rel="stylesheet" href='./Public/Styles/custom-styles.css'>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Links -->
 
     <!-- Scripts -->
@@ -27,46 +28,63 @@
 <body>
   <div class='page-grid'>
     <!-- Navbar -->
-        <div class='navbar-grid'>
-                <img style= 'grid-column: 2; grid-row: 1; height: 40px; width: 40px; float: right; margin: auto; margin-left: 85%;' src='./Public/Images/Corn.png'>
-                <h1 style='grid-column:3 ; grid-row: 1; text-align: center; color: #ffffff; font-weight: lighter; font-size: 30px; margin-top: 5px; margin-bottom: 5px; padding-top: 5x;'>Corn-Puter Computers</h1> 
-                <button class='btn-nav-system-builder btn btn-success' style ='background: rgba(0, 0, 0, 0.0); border-right: none'>System Builder</button> 
-                <button class='btn-nav-featured-builds btn btn-success' style ='background: rgba(0, 0, 0, 0.0); border-right: none;'>Featured Builds</button> 
-                <button class='btn-nav-other btn btn-success' style ='background: rgba(0, 0, 0, 0.0); border-right: none;'>Testing</button> 
-                <button class='search-placeholder btn btn-success' style ='background-color: gray; border: none;'>search placeholder</button> 
-        </div>
+      <div class='navbar-grid'>
+              <img style= 'grid-column: 2; grid-row: 1; height: 40px; width: 40px; float: right; margin: auto; margin-left: 85%;' src='./Public/Images/Corn.png'>
+              <h1 style='grid-column:3 ; grid-row: 1; text-align: center; color: #ffffff; font-weight: lighter; font-size: 30px; margin-top: 5px; margin-bottom: 5px; padding-top: 5x;'>Corn-Puter Computers</h1> 
+              <button class='btn-nav-system-builder btn btn-success' style ='background: rgba(0, 0, 0, 0.0); border-right: none'>System Builder</button> 
+              <button class='btn-nav-featured-builds btn btn-success' style ='background: rgba(0, 0, 0, 0.0); border-right: none;'>Featured Builds</button> 
+              <button class='btn-nav-home btn btn-success' style ='background: rgba(0, 0, 0, 0.0); border-right: none;'>Home</button> 
+              <!-- Will have to move the Home button to the left of the navbar later -->
+              <div class='search-container'>
+                <input type="text" placeholder="Search.." name="search">
+              </div> 
+              <button class='search-button search-button-1' type="submit"><i class="fa fa-search"></i></button>
+      </div>
     <!-- Navbar -->
 
     <!-- Top Half -->
-      <div class='our-info-grid'>
+      <div class='welcome-grid' style='background-image url("../Images/PCBuild4.png")'>
         <!-- Text Left --> 
-          <div class='info-text-left'>
+          <div class='welcome-message'>
             <h2>Welcome to Corn-Puter Computers</h2>
+            <p>Everything you need in one place</p>
           </div>
         <!-- Text Left -->
 
       </div>
     <!-- Top Half -->
 
-    <!-- Featured Builds -->
-    <!-- Featured Builds -->
+    <!-- Home Featured Builds -->
+      <div class='home-featured-grid'>
+        <div class='home-featured-header'>
+          <h2>Featured Builds</h2>
+          <p>Check out our latest builds with sleek designs.</p>
+        </div>
+        <div class='btn-home-featured'>
+          <button class='btn-home-featured btn btn-success' style ='background: #2b86de;'>Featured Builds</button> 
+        </div>
+        <div class='home-featured-img'>
+        </div>
+      </div>
+    <!-- Home Featured Builds -->
 
     <!-- Footer -->
-      <div class='page-footer-grid'>
-        <!-- Left -->
-        <div class='footer-left'>
-
-        </div>
-        <!-- Left -->
-        
-        <!-- Center -->
-        <!-- Center -->
-
-        <!-- Right -->
-          <div class='footer-right'>
-            <p></p>
+      <div class='footer-grid'>
+        <!-- Footer Top -->
+          <div class='footer-top-other'>
+            <p>insert stuff about company</p>
           </div>
-        <!-- Right -->
+          <div class='footer-top-contact'>
+            <p>Contact us at: customersupport@cornputercomputers.com</p>
+          </div>
+        <!-- Footer Top -->
+
+        <!-- Footer Bottom -->
+          <div class='footer-bottom'>
+            <p style='font-size: 15px'>© 2020 CORNPUTER CORPORATION OF AMERICA - Terms and Conditions - PRIVACY POLICY</p>
+          </div>
+        <!-- Footer Bottom -->
+      </div>
     <!-- Footer -->
   </div>
 </body>
